made it so that the json file is created if it does not exist

--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveFileName = 'addressbookv1.3.jar'
 }
 
 defaultTasks 'clean', 'test'
