Add UI for tutorials
Now tutorials will have similar look as tags, with different color

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,4 @@ src/test/data/sandbox/
 # MacOS custom attributes files created by Finder
 .DS_Store
 docs/_site/
-*.class
-*.class
-*.class
+*.sqlite
